Licence_3/1601/PTS_V1/pts/javacc/AnalyseurSyntaxique.java
/* Generated By:JavaCC: Do not edit this line. AnalyseurSyntaxique.java */
package pts.javacc;

import java.util.ArrayList;
import pts.ast.*;

@SuppressWarnings("all")
public class AnalyseurSyntaxique implements AnalyseurSyntaxiqueConstants {

/********************************************
 * LA GRAMMAIRE DU LANGAGE TPS COMMENCE ICI *
 ********************************************/
  final public Noeud Program() throws ParseException {
    Noeud n1,n2=null,n3=null,n4;
    jj_consume_token(PROGRAM);
    n1 = NewIdentifier();
    jj_consume_token(SEMICOLON);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      n2 = VariableDeclarationList();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FUNCTION:
      n3 = FunctionDeclarationList();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    n4 = CompoundStatement();
    jj_consume_token(DOT);
      {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.PROGRAM,new Noeud[]{n1,n2,n3,n4});}
    throw new Error("Missing return statement in function");
  }

  final public Noeud VariableDeclarationList() throws ParseException {
    Noeud n;
    ArrayList ln= new ArrayList();
    n = VariableDeclaration();
                              ln.add(n);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
      jj_consume_token(SEMICOLON);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        n = VariableDeclaration();
                                                                                    ln.add(n);
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
    }
      {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.VARIABLE_DECLARATION_LIST,ln);}
    throw new Error("Missing return statement in function");
  }

  final public Noeud VariableDeclaration() throws ParseException {
    Noeud n1,n2;
    jj_consume_token(VAR);
    n1 = NewIdentifier();
    jj_consume_token(COLON);
    n2 = Type();
     {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.VARIABLE_DECLARATION,new Noeud[]{n1,n2});}
    throw new Error("Missing return statement in function");
  }

  final public Noeud FunctionDeclarationList() throws ParseException {
    ArrayList ln= new ArrayList();
    Noeud n;
    n = FunctionDeclaration();
                              ln.add(n);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      jj_consume_token(SEMICOLON);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNCTION:
        n = FunctionDeclaration();
                                                                                       ln.add(n);
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
    }
      {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.FUNCTION_DECLARATION_LIST,ln);}
    throw new Error("Missing return statement in function");
  }

//TODO param multi
  final public Noeud FunctionDeclaration() throws ParseException {
    Noeud n1,n2=null,n3,n4;
    jj_consume_token(FUNCTION);
    n1 = NewIdentifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      n2 = ParameterDeclarationList();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(COLON);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case INTEGER:
      n3 = BasicType();
      break;
    case VOID:
      n3 = VoidType();
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(SEMICOLON);
    n4 = CompoundStatement();
      {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.FUNCTION_DECLARATION,new Noeud[]{n1,n2,n3,n4});}
    throw new Error("Missing return statement in function");
  }

//TODO param multi
  final public Noeud ParameterDeclarationList() throws ParseException {
    ArrayList ln= new ArrayList();
    Noeud n;
    n = ParameterDeclaration();
                               ln.add(n);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      n = ParameterDeclaration();
                                                                                   ln.add(n);
    }
      {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.PARAMETER_DECLARATION_LIST,ln);}
    throw new Error("Missing return statement in function");
  }

  final public Noeud ParameterDeclaration() throws ParseException {
    Noeud n1,n2;
    n1 = NewIdentifier();
    jj_consume_token(COLON);
    n2 = BasicType();
     {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.PARAMETER_DECLARATION,new Noeud[]{n1,n2});}
    throw new Error("Missing return statement in function");
  }

  final public Noeud Type() throws ParseException {
    Noeud n;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case INTEGER:
      n = BasicType();
      {if (true) return n;}
      break;
    case ARRAY:
      n = ArrayType();
      {if (true) return n;}
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Noeud BasicType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
      jj_consume_token(INTEGER);
        {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.INTEGER_TYPE);}
      break;
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
        {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.BOOLEAN_TYPE);}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Noeud VoidType() throws ParseException {
    jj_consume_token(VOID);
        {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.VOID_TYPE);}
    throw new Error("Missing return statement in function");
  }

  final public Noeud ArrayType() throws ParseException {
    Noeud n1,n2;
    jj_consume_token(ARRAY);
    jj_consume_token(LBRAC);
    n1 = Integer();
    jj_consume_token(RBRAC);
    jj_consume_token(OF);
    n2 = BasicType();
        {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.ARRAY_TYPE,new Noeud[]{n1,n2});}
    throw new Error("Missing return statement in function");
  }

  final public Noeud CompoundStatement() throws ParseException {
    Noeud n1=null,n2=null;
    jj_consume_token(BEGIN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      n1 = VariableDeclarationList();
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
    case RETURN:
    case WHILE:
    case BEGIN:
    case READ:
    case WRITE:
    case IDENTIFIER:
      n2 = StatementList();
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    jj_consume_token(END);
        {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.COMPOUND_STATEMENT,new Noeud[]{n1,n2});}
    throw new Error("Missing return statement in function");
  }

  final public Noeud StatementList() throws ParseException {
    ArrayList ln= new ArrayList();
    Noeud n;
    n = Statement();
                   ln.add(n);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_4;
      }
      jj_consume_token(SEMICOLON);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case RETURN:
      case WHILE:
      case BEGIN:
      case READ:
      case WRITE:
      case IDENTIFIER:
        n = Statement();
                                                              ln.add(n);
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
    }
        {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.STATEMENT_LIST,ln);}
    throw new Error("Missing return statement in function");
  }

  final public Noeud Statement() throws ParseException {
    Noeud n;
    if (jj_2_1(2)) {
      n = AssignmentStatement();
                {if (true) return n;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        n = ProcedureStatement();
                {if (true) return n;}
        break;
      case BEGIN:
        n = CompoundStatement();
                {if (true) return n;}
        break;
      case IF:
        n = IfStatement();
                {if (true) return n;}
        break;
      case WHILE:
        n = WhileStatement();
                {if (true) return n;}
        break;
      case READ:
      case WRITE:
        n = IOStatement();
                {if (true) return n;}
        break;
      case RETURN:
        n = ReturnStatement();
                {if (true) return n;}
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Noeud WhileStatement() throws ParseException {
    Noeud n1,n2;
    jj_consume_token(WHILE);
    n1 = Expression();
    jj_consume_token(DO);
    n2 = Statement();
        {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.WHILE_STATEMENT,new Noeud[] {n1,n2});}
    throw new Error("Missing return statement in function");
  }

  final public Noeud IfStatement() throws ParseException {
    Noeud n1,n2,n3=null;
    jj_consume_token(IF);
    n1 = Expression();
    jj_consume_token(THEN);
    n2 = Statement();
    if (jj_2_2(2147483647)) {
      jj_consume_token(ELSE);
      n3 = Statement();
    } else {
      ;
    }
        {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.IF_STATEMENT, new Noeud[] {n1,n2,n3});}
    throw new Error("Missing return statement in function");
  }

  final public Noeud AssignmentStatement() throws ParseException {
    Noeud n1,n2;
    n1 = VariableAccess();
    jj_consume_token(ASSIGN);
    n2 = Expression();
        {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.ASSIGN_STATEMENT, new Noeud[] {n1,n2});}
    throw new Error("Missing return statement in function");
  }

  final public Noeud VariableAccess() throws ParseException {
    Noeud n;
    if (jj_2_3(2)) {
      n = ArrayAccess();
        {if (true) return n;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        n = Identifier();
        {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.VARIABLE_ACCESS,n);}
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Noeud ArrayAccess() throws ParseException {
    Noeud n1,n2;
    n1 = Identifier();
    jj_consume_token(LBRAC);
    n2 = Expression();
    jj_consume_token(RBRAC);
        {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.ARRAY_ACCESS,new Noeud[]{n1,n2});}
    throw new Error("Missing return statement in function");
  }

  final public Noeud ProcedureStatement() throws ParseException {
    Noeud n1,n2=null;
    n1 = Identifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FALSE:
    case TRUE:
    case NOT:
    case INTEGER_LITERAL:
    case IDENTIFIER:
    case LPAREN:
    case MINUS:
      n2 = ArgumentList();
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
        {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.PROCEDURE_STATEMENT,new Noeud[]{n1,n2});}
    throw new Error("Missing return statement in function");
  }

  final public Noeud IOStatement() throws ParseException {
    Noeud n;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case READ:
      jj_consume_token(READ);
      n = VariableAccess();
        {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.READ_STATEMENT,n);}
      break;
    case WRITE:
      jj_consume_token(WRITE);
      n = Expression();
        {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.WRITE_STATEMENT,n);}
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Noeud ReturnStatement() throws ParseException {
    Noeud n;
    jj_consume_token(RETURN);
    n = Expression();
        {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.RETURN_STATEMENT,n);}
    throw new Error("Missing return statement in function");
  }

//TODO param multi
  final public Noeud ArgumentList() throws ParseException {
        ArrayList ln= new ArrayList();
        Noeud n;
    n = Argument();
                       ln.add(n);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      n = Argument();
                                                             ln.add(n);
    }
                {if (true) return new Noeud(getToken(0).beginLine,EtiquetteNoeud.ARGUMENT_LIST,ln);}
    throw new Error("Missing return statement in function");
  }

  final public Noeud Argument() throws ParseException {
    Noeud n;
    n = Expression();
        {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  final public Noeud Expression() throws ParseException {
    Noeud n1,n2=null;
    EtiquetteNoeud op=null;
    n1 = SimpleExpression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case GT:
    case LT:
    case EQ:
    case LE:
    case GE:
    case NE:
      op = RelOp();
      n2 = SimpleExpression();
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
        {if (true) return (n2==null) ? n1 : new Noeud(getToken(0).beginLine,op,new Noeud[]{n1,n2});}
    throw new Error("Missing return statement in function");
  }

  final public EtiquetteNoeud RelOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
      jj_consume_token(EQ);
        {if (true) return EtiquetteNoeud.EQUAL_EXPRESSION;}
      break;
    case NE:
      jj_consume_token(NE);
        {if (true) return EtiquetteNoeud.NOT_EQUAL_EXPRESSION;}
      break;
    case LT:
      jj_consume_token(LT);
        {if (true) return EtiquetteNoeud.LOWER_EXPRESSION;}
      break;
    case GT:
      jj_consume_token(GT);
        {if (true) return EtiquetteNoeud.GREATER_EXPRESSION;}
      break;
    case LE:
      jj_consume_token(LE);
        {if (true) return EtiquetteNoeud.LOWER_EQUAL_EXPRESSION;}
      break;
    case GE:
      jj_consume_token(GE);
        {if (true) return EtiquetteNoeud.GREATER_EQUAL_EXPRESSION;}
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Noeud SimpleExpression() throws ParseException {
    Noeud n1,n2=null;
    EtiquetteNoeud op=null;
    n1 = Term();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OR:
    case PLUS:
    case MINUS:
      op = AddOp();
      n2 = SimpleExpression();
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
        {if (true) return (n2==null) ? n1 : new Noeud(getToken(0).beginLine,op,new Noeud[]{n1,n2});}
    throw new Error("Missing return statement in function");
  }

  final public EtiquetteNoeud AddOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      jj_consume_token(PLUS);
        {if (true) return EtiquetteNoeud.PLUS_EXPRESSION;}
      break;
    case MINUS:
      jj_consume_token(MINUS);
        {if (true) return EtiquetteNoeud.MINUS_EXPRESSION;}
      break;
    case OR:
      jj_consume_token(OR);
        {if (true) return EtiquetteNoeud.OR_EXPRESSION;}
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Noeud Term() throws ParseException {
    Noeud n1,n2=null;
    EtiquetteNoeud op=null;
    n1 = Primary();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
    case MUL:
    case DIV:
    case REM:
      op = MulOp();
      n2 = Term();
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
        {if (true) return (n2==null) ? n1 : new Noeud(getToken(0).beginLine,op,new Noeud[]{n1,n2});}
    throw new Error("Missing return statement in function");
  }
